--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "font-awesome": "^4.7.0",
     "gatsby": "^2.1.18",
     "gatsby-image": "^2.0.30",
+    "gatsby-plugin-breadcrumb": "^2.1.1",
     "gatsby-plugin-google-fonts": "0.0.4",
     "gatsby-plugin-manifest": "^2.0.19",
     "gatsby-plugin-offline": "^2.0.24",
